--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Remember To Do Them</string>
+    <string name="app_name">Remember to Do Them</string>
+    <string name="date_picker_title">Date of Chore:</string>
+
 </resources>
