--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Remember to Do Them</string>
     <string name="date_picker_title">Date of Chore:</string>
+    <string name="new_chore">New Chore</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle_format">%1$s chores</string>
 
 </resources>
